complementando os campos do formulario

--- a/Templates/atualizar.html
+++ b/Templates/atualizar.html
@@ -14,20 +14,32 @@
 						<td><input type="text" name="nome" value="{{ pessoa.nome }}"></td>
 					</tr>
 					<tr>
-						<td>Sobrenome:</td>
-						<td><input type="text" name="sobrenome" value="{{ pessoa.sobrenome }}"></td>
-					</tr>
-					<tr>
-						<td>Endereço:</td>
-						<td><input type="text" name="endereco" value="{{ pessoa.endereco }}"></td>
+						<td>Rua:</td>
+						<td><input type="text" name="rua" value="{{ pessoa.rua }}"></td>
 					</tr>
 					<tr>
 						<td>Número:</td>
 						<td><input type="text" name="numero" value="{{ pessoa.numero }}"></td>
 					</tr>
 					<tr>
+						<td>Bairro:</td>
+						<td><input type="text" name="bairro" value="{{ pessoa.bairro }}"></td>
+					</tr>
+					<tr>
+						<td>Cidade:</td>
+						<td><input type="text" name="cidade" value="{{ pessoa.cidade }}"></td>
+					</tr>
+					<tr>
+						<td>Estado:</td>
+						<td><input type="text" name="estado" value="{{ pessoa.estado }}"></td>
+					</tr>
+					<tr>
 						<td>Telefone:</td>
-						<td><input type="text" name="telefone" value="{{ pessoa.telefone }}"></td>
+						<td><input type="text" name="fone" value="{{ pessoa.fone }}"></td>
+					</tr>
+					<tr>
+						<td>E-mail:</td>
+						<td><input type="text" name="email" value="{{ pessoa.email }}"></td>
 					</tr>
 				</table>
 				<input type="submit" value="Atualizar">
