--- a/Templates/cadastro.html
+++ b/Templates/cadastro.html
@@ -14,20 +14,36 @@
 						<td><input type="text" name="nome"></td>
 					</tr>
 					<tr>
-						<td>Sobrenome:</td>
-						<td><input type="text" name="sobrenome"></td>
-					</tr>
-					<tr>
-						<td>Endereço:</td>
-						<td><input type="text" name="endereco"></td>
+						<td>Rua:</td>
+						<td><input type="text" name="rua"></td>
 					</tr>
 					<tr>
 						<td>Número:</td>
 						<td><input type="text" name="numero"></td>
 					</tr>
 					<tr>
+						<td>Bairro:</td>
+						<td><input type="text" name="bairro"></td>
+					</tr>
+					<tr>
+						<td>Cidade:</td>
+						<td><input type="text" name="cidade"></td>
+					</tr>
+					<tr>
+						<td>Estado:</td>
+						<td><input type="text" name="estado"></td>
+					</tr>
+					<tr>
 						<td>Telefone:</td>
-						<td><input type="text" name="telefone"></td>
+						<td><input type="text" name="fone"></td>
+					</tr>
+					<tr>
+						<td>CPF:</td>
+						<td><input type="text" name="cpf"></td>
+					</tr>
+					<tr>
+						<td>Email:</td>
+						<td><input type="text" name="email"></td>
 					</tr>
 				</table>
 				<input type="submit" value="Salvar Cadastro"/>
