--- a/Templates/lista.html
+++ b/Templates/lista.html
@@ -3,11 +3,22 @@
 	<head>
 		<title>Pesquisar</title>
 		<meta charset = "UTF-8">
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+		<!-- Optional theme -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		<link type="text/css" rel="stylesheet" href="../static/estilo.css">
+
 	</head>
 	<body>
-		<h1>Lista de Clientes</h1>
-		<hr>
-		<table border="3" width="100%">
+		<div class="page-header">
+			<h1>Lista de Clientes</h1>
+		</div>
+		<table  class="table" border="4">
 			<tr>
 				<td>ID</td>
 				<td>Nome</td>
@@ -34,11 +45,11 @@
 					<td>{{ pessoa.fone }}</td>
 					<td>{{ pessoa.cpf }}</td>
 					<td>{{ pessoa.email }}</td>
-					<td><center><a href="/excluir/{{ pessoa._id }}"><input type="submit" value="x"></a></center></td>
-					<td><center><a href="/atualizar/{{ pessoa._id }}"><input type="submit" value="editar"></a></center></td>
+					<td><center><a href="/excluir/{{ pessoa._id }}">Remover</a></center></td>
+					<td><center><a href="/atualizar/{{ pessoa._id }}">Alterar</a></center></td>
 				</tr>
 			{% endfor %}
-		</table>
-		<a href="{{ url_for('home') }}"><input type="button" value="Voltar"></a>
+		</table><br>
+		<a href="{{ url_for('home') }}"><input type="button" class="btn btn-primary btn-lg" value="Voltar"></a>
 	</body>
 </html>
