--- a/Templates/atualizar.html
+++ b/Templates/atualizar.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8">
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="static/css/bootstrap.min.css">
+		
+		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="static/css/bootstrap-theme.min.css">
